--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: protospace_30381_2_development
+  database: protospace_30381_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: protospace_30381_2_test
+  database: protospace_30381_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: protospace_30381_2_production
-  username: protospace_30381_2
-  password: <%= ENV['PROTOSPACE_30381_2_DATABASE_PASSWORD'] %>
+  database: protospace_30381_production
+  username: protospace_30381
+  password: <%= ENV['PROTOSPACE_30381_DATABASE_PASSWORD'] %>
